Bug 347470: New theme icons have too much intervening horizontal space on Linux, patch by Michael Wu <michael.wu@mozilla.com>, r+a=mconnor

--- a/mozilla/browser/themes/winstripe/browser/searchbar.css
+++ b/mozilla/browser/themes/winstripe/browser/searchbar.css
@@ -1,5 +1,11 @@
 /* *** winstripe *** */
 
+%ifdef MOZ_WIDGET_GTK2
+#searchbar {
+  -moz-margin-start: 3px;
+}
+%endif
+
 #searchbar .search-go-button,
 #searchbar .searchbar-textbox {
 	border: 0px !important;
